# WineQualityPrediction

./: README.md  pyproject.toml  winePrediction.ipynb
.git-old/: COMMIT_EDITMSG  config  index  packed-refs
.git-old/logs/: HEAD
.git-old/logs/refs/heads/: dev  main
.git-old/logs/refs/remotes/origin/: HEAD  dev  main
.git-old/objects/pack/: pack-c06eb536ae1ed8504201af65b87dada8f4bffbac.idx  pack-c06eb536ae1ed8504201af65b87dada8f4bffbac.pack  pack-c06eb536ae1ed8504201af65b87dada8f4bffbac.rev
.git-old/refs/heads/: dev
.git-old/refs/remotes/origin/: main
